white rabbit project

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -88,7 +89,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           }
@@ -119,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "whiteRabbitTest"
+    }
+  },
+  "defaultProject": "whiteRabbitTest",
+  "cli": {
+    "analytics": "75211323-95c3-4ac5-9806-3271175df15b"
+  }
 }
